--- a/tomcat-websocket-chat/src/main/webapp/index.xhtml
+++ b/tomcat-websocket-chat/src/main/webapp/index.xhtml
@@ -129,6 +129,10 @@
     <div id="console-container">
         <div id="console"/>
     </div>
+
+
+    Modification .... Hey !!!
+
 </div>
 </body>
 </html>
