--- a/tomcat-websocket-chat/src/main/webapp/index.xhtml
+++ b/tomcat-websocket-chat/src/main/webapp/index.xhtml
@@ -119,7 +119,7 @@
 
     ]]></script>
 </head>
-<body style="background-color: #3e8f3e">
+<body style="background-color: yellow">
 <div class="noscript"><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websockets rely on Javascript being enabled. Please enable
     Javascript and reload this page!</h2></div>
 <div>
